Closed Bug 20504 Opened 26 years ago Closed 26 years ago

[DOGFOOD] Printing Crashes in the nsViewManager

Categories

(Core :: Web Painting, defect, P3)

All
Windows NT
defect

Tracking

()

VERIFIED FIXED

People

(Reporter: dcone, Assigned: beard)

References

Details

(Whiteboard: [PDT+])

Printing crashes in nsViewManager::ViewToWidget() The aWidgetView member is null,, and KABOOM..
Summary: [Dogfood] Printing Crashes in the nsViewManager → [DOGFOOD] Printing Crashes in the nsViewManager
Whiteboard: [PDT+]
Putting on PDT+ radar.
*** Bug 20531 has been marked as a duplicate of this bug. ***
Status: NEW → ASSIGNED
Here's a patch to fix this. Please review and I'll check it in. This should fix the crash you may be seeing when printing. On the other hand, I see another crash when printing with GFX scrollbars turned on. Evidently the frame hierarchy isn't exactly what you're expecting it to be when GFX scrollbars are used. Index: mozilla/view/src/nsViewManager.cpp =================================================================== RCS file: /cvsroot/mozilla/view/src/nsViewManager.cpp,v retrieving revision 3.137 diff -b -r3.137 nsViewManager.cpp 2251d2250 < nsRect widgetRect = aRect; 2252a2252,2253 > if (widgetView != nsnull) { > nsRect widgetRect = aRect; 2259a2261 > }
This fix looks good...
Status: ASSIGNED → RESOLVED
Closed: 26 years ago
Resolution: --- → FIXED
Status: RESOLVED → VERIFIED
Fixed per reporter. Verifying it so.
Component: Layout: View Rendering → Layout: Web Painting
You need to log in before you can comment on or make changes to this bug.