bug #20504:  fix crash when printing. r=joki